Fix: Widen search suggestions on mobile

--- a/src/SlownikPolonijny.Web/wwwroot/css/site.css
+++ b/src/SlownikPolonijny.Web/wwwroot/css/site.css
@@ -110,3 +110,8 @@ form .card {
   box-shadow: 0;
   display: inline;
 }
+@media (max-width: 767px) {
+  .easy-autocomplete-container {
+    width: 90vw !important;
+  }
+}
